--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,7 +38,6 @@ h3{
 /* adding a background color to whole site */
 #background-color {
     position: fixed;
-    background: rgb(245,245,245);
     background: linear-gradient(90deg, rgba(245,245,245,1) 0%, rgba(215,215,215,1) 46%, rgba(240,240,240,1) 100%);
     width: 100%;
     height: 100%;
@@ -191,7 +190,7 @@ a {
     width: 100%;
     height: 6rem;
     text-transform: uppercase;
-    background-color: rgb(255, 255, 255);
+    background: linear-gradient(90deg, rgb(166, 201, 155) 0%, rgb(116, 199, 113) 46%, rgb(112, 216, 103) 100%);
     z-index: 99;
     display: grid;
     grid-template-columns: 1fr 3fr;
