fixed bug with quote over product section by removing line height on less than 650px screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -347,19 +347,19 @@ a {
 
 #quote{
 	background-image:  linear-gradient(180deg, rgb(238, 238, 238) 0%, rgba(255, 92, 92, 0) 20%, rgba(60, 187, 60, 0.623) 100%);
-	height: 8rem;
+	height: 9rem;
 	line-height: 8rem;
-	font-size: 3vw;
+	font-size: 1.5rem;
 	text-align: center;
 	text-shadow: 5px 5px 10px rgba(0, 0, 0, 0.329);
-	letter-spacing: 0.8vw;
+	letter-spacing: 0.5vw;
 	font-weight: 200;
 }
 
 .green-text{
 	color: rgb(21, 177, 0);
 	font-weight: 500;
-	font-size: 3rem;
+	font-size: 2rem;
 }
 
 /* products */
@@ -806,6 +806,13 @@ input:hover {
 	}
 	#arrow-down {
 		font-size: 2rem;
+	}
+
+	#quote{
+		height: 9rem;
+		font-size: 1rem;
+		line-height: normal;
+
 	}
 	#products-grid-container {
 		display: grid;
