--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -284,7 +284,7 @@ a {
 /* presentation */
 
 #presentation-background {
-	background-image:  linear-gradient(0deg, rgb(238, 238, 238) 0%, rgba(255, 92, 92, 0) 30%, rgba(37, 163, 163, 0) 100%), url("../images/wood-plants.jpg");
+	background-image:  linear-gradient(0deg, rgb(238, 238, 238) 0%, rgba(255, 92, 92, 0) 30%, rgba(37, 163, 163, 0) 100%), url("../images/wood-plants.webp");
 	background-size: cover;
 	margin-top: 4rem;
 	min-height: 100%;
